Fix visual issues on mobile

--- a/main/static/main/css/base.css
+++ b/main/static/main/css/base.css
@@ -77,3 +77,9 @@ form .errorlist {
 	background: url("../img/bg.png") repeat-x;
 	overflow: hidden;
 }
+
+@media (max-width: 1000px) {
+	.container {
+		border: 0;
+	}
+}
