--- a/main/static/main/css/club.css
+++ b/main/static/main/css/club.css
@@ -65,10 +65,10 @@
     .main > nav {
         position: inherit;
         width: 100%;
-        height: 40px;
-        overflow: auto;
-        white-space: nowrap;
+        height: auto;
         background-image: none !important;
+        font-size: 13px;
+        padding: 8px 5px;
     }
 
     .main > nav > * {
@@ -81,6 +81,7 @@
 
     .main > nav li {
         display: inline-block;
+        padding: 2px 4px;
     }
 
     .main > .content {
